<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/activity_fragment_simple">

    </FrameLayout>

    <Button
        android:id="@+id/open_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="cursive"
        android:text="@string/open"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/image_01"
        app:layout_goneMarginLeft="@dimen/standard_margin"
        app:layout_goneMarginStart="@dimen/standard_margin"
        app:layout_goneMarginTop="@dimen/standard_margin"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/image_01"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toTopOf="@+id/image_02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642"
        app:srcCompat="@drawable/hanayamata" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="225dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toTopOf="@+id/title_02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toEndOf="@+id/image_01"
        app:layout_constraintTop_toBottomOf="@+id/title_01"
        app:layout_constraintVertical_bias="0.382">

        <TextView
            android:id="@+id/article_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/article1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />
    </ScrollView>

    <TextView
        android:id="@+id/title_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:fontFamily="cursive"
        android:text="@string/title2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/image_02"
        app:layout_constraintTop_toTopOf="@+id/image_02"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="225dp"
        android:layout_height="208dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toEndOf="@+id/image_02"
        app:layout_constraintTop_toBottomOf="@+id/title_02"
        app:layout_constraintVertical_bias="0.021">

        <TextView
            android:id="@+id/article_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/article2"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="16sp" />
    </ScrollView>

    <TextView
        android:id="@+id/title_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/title1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toEndOf="@+id/image_01"
        app:layout_constraintTop_toTopOf="@+id/image_01" />

    <ImageView
        android:id="@+id/image_02"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748"
        app:srcCompat="@drawable/houseki_no_kuni" />

</androidx.constraintlayout.widget.ConstraintLayout>